# RL_Project

./: .gitignore  AUDIT_REPORT.md  EXPERIMENT_REPORT.md  Makefile  README.md  analyze_coverage_aware.py  analyze_invitation_mask_final.py  analyze_main_frontier.py  benchmark_policy_runtime.py  diagnose_coverage_b3_failures.py  diagnose_policy_actions.py  evaluate_adaptive_feedback_probing.py  evaluate_agent.py  evaluate_bandit_feedback_ms_aircomp.py  evaluate_bandit_feedback_stress_sweep.py  evaluate_batch.py  evaluate_channel_estimation_error_sweep.py  evaluate_execution_channel_mismatch.py  evaluate_invitation_mask_correction.py  evaluate_limited_csi_ms_aircomp.py  evaluate_parameter_sweep.py  evaluate_partial_probing_sweep.py  evaluate_policy_comparison.py  evaluate_random_irs_baseline.py  generate_paper_figures.py  generate_paper_tables.py  pyproject.toml  requirements-lock.txt  requirements.txt  summarize_execution_baselines.py  test_env.py  train_agent.py  train_bandit_feedback_selector.py  train_codebook_aware_agent.py  train_greedy_imitation_selector.py  train_learned_sparse_shortlist.py  train_temporal_deviation_selector.py
docs/: BASELINE_STRATEGY.md  CODE_EXPLANATION_CN.md  COVERAGE_AWARE_ANALYSIS.md  COVERAGE_B3_FAILURE_DIAGNOSIS.md  DEPRECATED_DIRECTIONS.md  ENVIRONMENT.md  EXECUTION_BASELINE_SUMMARY.md  FINAL_INVITATION_MASK_ANALYSIS.md  INVITATION_MASK_CORRECTION.md  INVITATION_MASK_CORRECTION_NOISE.md  INVITATION_MASK_CORRECTION_NOISE_AWARE.md  INVITATION_MASK_RERANK_ABLATION.md  MAIN_RESULTS_ANALYSIS.md  MAIN_STORY.md  PAPER_APPENDIX_BOUNDARY.md  (+13 more)
(+110 files in other folders)
