[build-system]
requires = ["setuptools>=81.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "irs-assisted-ms-aircomp"
version = "0.1.0"
description = "IRS-assisted multi-slot AirComp experiment and reproduction code."
requires-python = ">=3.13,<3.14"
dependencies = [
    "gymnasium==1.2.3",
    "matplotlib==3.10.9",
    "numpy==2.4.4",
    "pytest==9.0.3",
    "ruff==0.15.13",
    "stable-baselines3[extra]==2.8.0",
    "torch==2.11.0",
]

[tool.setuptools]
packages = ["ms_aircomp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
